force-app/main/default/src/objects/HealthCloudGA__EHRProcedureRequest__c/HealthCloudGA__EHRProcedureRequest__c.object-meta.xml
<CustomObject>
    <description>A Procedure Request is a record of a request for a procedure to be performed. It can be used to represent a procedure that is planned, that is proposed, or that is ordered, as distinguished by the value of the ProcedureRequestStatus field.</description>
    <label>EHR Procedure Request</label>
    <nameField>
        <displayFormat>ProcRequest-{0}</displayFormat>
        <label>EHR Procedure Request  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Procedure Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>