force-app/main/default/src/objects/HealthCloudGA__EHRProcedureRequest__c/fields/HealthCloudGA__Account__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Name of the person the procedure was performed on</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EHR Procedure Requests</relationshipLabel>
    <relationshipName>EHRProcedureRequests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>