force-app/main/default/src/objects/HealthCloudGA__EHRProcedureRequest__c/fields/HealthCloudGA__Category__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Category__c</fullName>
    <description>High-level categorization of the procedure</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>