force-app/main/default/src/objects/HealthCloudGA__EHRProcedureRequest__c/fields/HealthCloudGA__CodeLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CodeLabel__c</fullName>
    <description>Name of the procedure</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Code Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>