force-app/main/default/src/objects/HealthCloudGA__EHRProcedureRequest__c/fields/HealthCloudGA__Encounter__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Encounter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Encounter associated with the procedure</description>
    <label>Encounter</label>
    <referenceTo>HealthCloudGA__EhrEncounter__c</referenceTo>
    <relationshipLabel>EHR Procedure Requests</relationshipLabel>
    <relationshipName>EHRProcedureRequests</relationshipName>
    <type>Lookup</type>
</CustomField>