force-app/main/default/src/objects/HealthCloudGA__EHRProcedureRequest__c/fields/HealthCloudGA__OrderedBy__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__OrderedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordered By</label>
    <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
    <relationshipLabel>EHR Procedure Requests</relationshipLabel>
    <relationshipName>EHRProcedureRequests</relationshipName>
    <type>Lookup</type>
</CustomField>