force-app/main/default/src/objects/HealthCloudGA__EHRProcedureRequest__c/fields/HealthCloudGA__Priority__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Routine</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Stat</fullName>
            </value>
            <value>
                <fullName>ASAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>