force-app/main/default/src/objects/HealthCloudGA__EHRProcedureRequest__c/fields/HealthCloudGA__Reason3__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Reason3__c</fullName>
    <description>Reason the procedure was requested</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>